Findbugs Bx See #1361
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jdo@15829 18c61ebf-f106-0410-9e1e-81fb82415b8f